syntax = "proto3";

package account;

service AccountService {
  rpc CreateAccount(CreateAccountRequest) returns (Account);
  rpc ValidateApiKey(ValidateApiKeyRequest) returns (Account);
  rpc RevealApiKey(RevealApiKeyRequest) returns (RevealApiKeyResponse);
  rpc monthlyBilling(SummarizeMonthlyUsageRequest) returns (SummarizeMonthlyUsageResponse);

}

message CreateAccountRequest { string id = 1; }

message Account {
  string id = 1;
  int64 credits = 2;
}

message ValidateApiKeyRequest { string key = 1; }

message RevealApiKeyRequest {
  string accountId = 1;
  string secretId = 2;
}

message RevealApiKeyResponse {
  string apiKey = 1;
}

message SummarizeMonthlyUsageRequest {
  string appId = 1;
  string month = 2; // Format: "YYYY-MM"
}

message SummarizeMonthlyUsageResponse {
  string appId = 1;
  string month = 2;
  int64 credits = 3;
}
